examples/test/testpolicy6881.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6881
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key26: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value12
      podSelector:
        matchLabels:
          key30: value6
          key9: value22
          key35: value38
